k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airline-front
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: airline.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airline-front
                port:
                  number: 80
